# surrealdb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.dynamodb  Makefile  README.md  docker-compose.yaml
.github/workflows/: ci.yml  nightly.yml
aws_lambda/: Cargo.toml  Dockerfile
aws_lambda/src/: main.rs
core/: Cargo.toml
core/src/kvs/: ds.rs  mod.rs  tx.rs
core/src/kvs/dynamodb/: mod.rs
infrastructure/: Dockerfile  README.md  api-gtw.tf  dynamo.tf  dynamodb.tf  ecr.tf  lambda.tf  main.tf  output.tf  variables.tf
infrastructure/fargate/: alb.tf  autoscale.tf  cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  main.tf  network.tf  outputs.tf  route53.tf  security.tf  ssm.tf  variables.tf
infrastructure/lambda/: api-gtw.tf  ecr.tf  main.tf  output.tf  route53.tf  variables.tf
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/api/engine/: mod.rs
lib/src/api/engine/any/: mod.rs  native.rs  wasm.rs
lib/src/api/engine/local/: mod.rs
lib/src/api/opt/: strict.rs
lib/src/api/opt/endpoint/: dynamodb.rs  mod.rs
lib/src/key/: mod.rs
lib/src/kvs/: ds.rs  mod.rs  tx.rs
lib/src/kvs/dynamodb/: mod.rs
lib/tests/: api.rs
src/: lib.rs  main.rs
src/cli/: config.rs  mod.rs  start.rs
src/cli/validator/: mod.rs
src/dbs/: mod.rs
src/net/: mod.rs
