[package]
name = "aws-lambda"
publish = false
version = "1.0.0-beta.9"
edition = "2021"
license-file = "LICENSE"
authors = ["Roman Selmeci <selmeci.roman@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "surrealdb"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28"}
warp = "0.3"
lambda-web = { version = "0.2", features=["hyper"] }
surreal = { path = "./surrealdb", features = ["aws-lambda"], default-features = false }
